Fixed minor layout problem in receipt template

--- a/client/views/receipt/style.less
+++ b/client/views/receipt/style.less
@@ -292,7 +292,7 @@
 
     .invoice-intro {
       float: left;
-      width: 50%;
+      width: 41%;
       text-align: left;
       padding-top: 0;
     }
@@ -303,7 +303,7 @@
 
     .invoice-meta {
       float: right;
-      width: 48%;
+      width: 59%;
     }
 
     .invoice-meta dd {
